# 5511-a2-rag

./: .env.example  .gitignore  README.md  TODO.md  generate_test_batch.py  old_notebook_1660cd6.ipynb  pyproject.toml  rag.ipynb
data/: data.md  qa_pairs.csv  test_eval_data.jsonl
knowledge_base/: kb.md
output/: eval_results.jsonl  eval_results_local.jsonl  ir_metrics_by_group.csv  ir_metrics_per_question.csv  ir_metrics_summary.txt  manual_audit.csv  manual_audit_explanation.txt  qa_pairs.csv  qa_results.csv  results.md  test_eval_data.jsonl
src/: embed.py  evaluate.py  generate.py  generate_qa_pairs.py  generate_test_batch.py  rag.ipynb  rag_pipeline.py  retrieve.py  run_qa_evaluation.py
