[project]
name = "a2-rag"
version = "0.1.0"
description = "RAG System and Criticist the Models"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "autorag[gpu,parse,vllm]>=0.2.6",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "kagglehub>=1.0.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "matplotlib>=3.10.8",
    "pandas-stubs~=2.3.3",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.4",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "ty>=0.0.19",
]
